Issue 236 - Proper Tooltip Wrap (#246)
* added recommed tooltip styling to fix bug

* added recommed tooltip styling to fix bug

* removed important tag

--- a/src/styles/custom/_globals.scss
+++ b/src/styles/custom/_globals.scss
@@ -31,6 +31,7 @@ input[type=radio]:focus
 .tooltip-inner {
     padding: 6px 12px;
     text-align: left;
+    word-wrap: break-word;
 }
 
 .progress {
